--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   	<!-- scripts -->
 	  <script src="bower_components/p5.js/lib/p5.js"></script>
 	  <!-- uncomment lines below to include extra p5 libraries -->
-		<!--<script src="src="bower_components/p5.js/lib/addons/p5.dom.js"></script>-->
-	  <!--<script src="src="bower_components/p5.js/lib/addons/p5.sound.js"></script>-->
+		<script src="bower_components/p5.js/lib/addons/p5.dom.js"></script>
+	  	<script src="bower_components/p5.js/lib/addons/p5.sound.js"></script>
 	  <script language="javascript" src="js/sketch.js"></script>
   </head>
 	<body>
