--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 		<title>p5.js seed project</title>
 		<!-- css -->
 		<link rel="stylesheet" href="css/style.css">
+  </head>
+	<body>
+
+<!-- bower:js -->
+<script src="bower_components/leapjs/leap-0.6.2.js"></script>
+<!-- endbower -->
+
   	<!-- scripts -->
 	  <script src="bower_components/p5.js/lib/p5.js"></script>
 	  <!-- uncomment lines below to include extra p5 libraries -->
 		<script src="bower_components/p5.js/lib/addons/p5.dom.js"></script>
 	  	<script src="bower_components/p5.js/lib/addons/p5.sound.js"></script>
 	  <script language="javascript" src="js/sketch.js"></script>
-  </head>
-	<body>
 
 	</body>
 </html>
