reverted to manual inclusion of leapjs-plugins

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	  <!-- uncomment lines below to include extra p5 libraries -->
 		<script src="bower_components/p5.js/lib/addons/p5.dom.js"></script>
 	  	<script src="bower_components/p5.js/lib/addons/p5.sound.js"></script>
+	  	<script src="//js.leapmotion.com/leap-plugins-0.1.10.min.js"></script>
 	  <script language="javascript" src="js/sketch.js"></script>
 
 	</body>
