Integrating tonejs instruments

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <!-- bower:js -->
 <script src="bower_components/leapjs/leap-0.6.2.js"></script>
+<script src="bower_components/tone/build/Tone.js"></script>
 <!-- endbower -->
 
   	<!-- scripts -->
