--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(client) app/vendor.css -->
       <!-- bower:css -->
+      <link rel="stylesheet" href="../bower_components/angular-rangeslider/angular.rangeSlider.css" />
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
@@ -57,6 +58,7 @@
       <script src="../bower_components/p5js/lib/p5.min.js"></script>
       <script src="../bower_components/leapjs/leap-0.6.2.js"></script>
       <script src="../bower_components/tone/build/Tone.js"></script>
+      <script src="../bower_components/angular-rangeslider/angular.rangeSlider.js"></script>
       <!-- endbower -->
     <!-- endbuild -->
 
