More fidddling with effects

--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -12,6 +12,10 @@
 
 					<label>P1: ModulationIndex</label>
 					<div range-slider min="0" max="30" model-max="param1" pin-handle="min" decimal-places="2"></div>
+
+					<label>P2: Chorus</label>
+					<div range-slider min="0" max="40" model-max="param2" pin-handle="min"></div>
+
 				</div>
 			</form>
 
