--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -13,8 +13,11 @@
 					<label>P1: ModulationIndex</label>
 					<div range-slider min="0" max="30" model-max="param1" pin-handle="min" decimal-places="2"></div>
 
-					<label>P2: Chorus</label>
-					<div range-slider min="0" max="40" model-max="param2" pin-handle="min"></div>
+					<label>P2: Chorus {{param2}}</label>
+					<div range-slider min="0" max="20" model-max="param2" pin-handle="min" decimal-places="1"></div>
+
+					<label>P3: Reverb</label>
+					<div range-slider min="0" max="1" model-max="param3" pin-handle="min" decimal-places="2"></div>
 
 				</div>
 			</form>
